--- a/querqy-core/src/main/java/querqy/model/builder/todo/todo.txt
+++ b/querqy-core/src/main/java/querqy/model/builder/todo/todo.txt
@@ -1,11 +1,17 @@
 Set Defaults:
 - add tests
-
 - setdefaults in build?
 - setAndCheckDefaults in build / tomap
 
 
+Finish toMap():
+- refactor tests
+- remove unneeded method
+- map value converter
 
+
+
+Misc:
 - check all exceptions
 
 
